# yaket

./: .gitignore  .gitlab-ci.yml  MANIFEST.in  README.md  mkdocs.yml  pyproject.toml  setup.py
.github/workflows/: tests.yaml
docs/: reference.md
examples/: 00-simple-mnist-convnet.ipynb  01-asr-ctc.ipynb  02-bit-image.ipynb  03-umbalanced.ipynb  Untitled-1.py
examples/files/: 01_custom_modules.py  01_trainer.yaml  02_trainer.yaml  03_trainer.yaml  trainer.yaml
tests/: tests_trainer.py
tests/test_converter/: test_converter.py
tests/test_trainer/: test_trainer.py  tests_trainer.py
wheels/: yaket-0.0.1-py3-none-any.whl  yaket-1.0.0-py3-none-any.whl  yaket-1.2.0-py3-none-any.whl  yaket-1.3.0-py3-none-any.whl
yaket/: __init__.py  trainer.py
yaket/converter/: __init__.py  converter.py
yaket/schema/: __init__.py  schema.py
